# YouAlwaysWereJS

./: .gitignore  .prettierignore  CODING_RULES.md  CONFIG_GUIDE.md  DEPLOYMENT.md  DEV_CONSOLE_GUIDE.md  LANGCHAIN_VERIFICATION.md  LM_STUDIO_GUIDE.md  README.md  SETTINGS_GUIDE.md  TYPEWRITER_EFFECT.md  build.py  check.py  dev.py  eslint.config.mjs  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
public/kuzu-wasm/: index.js
scripts/: bootstrapKuzuWasm.mjs  check-code-quality.bat  check-code-quality.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ActionPanel.tsx  ChatInput.tsx  ChatMessage.tsx  DisplaySettingsModal.tsx  GameBoard.tsx  KuzuPersistentDemo.tsx  MemoryManagerModal.tsx  PromptEditorModal.tsx  SaveButton.tsx  SettingsModal.tsx  StartupSplash.tsx  StatusBar.tsx  UserInfoModal.tsx
src/config/: gameConfig.ts
src/constants/: animations.ts  app.ts  prompts.ts  typewriter.ts
src/hooks/: useSaveState.ts  useTypewriter.ts
src/polyfills/: asyncLocalStorage.ts
src/services/: kuzuClient.ts
src/services/ai/: index.ts  openai.ts
src/services/langgraph/: kuzuTools.ts  workflow.ts
src/services/mcp/: client.ts
src/types/: chat.ts  game.ts  kuzu-wasm.d.ts  prompt.ts  userInfo.ts
src/utils/: errorHandler.ts  promptBuilder.ts  storage.ts
